examples/test/testpolicy18489.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18489
  namespace: namespace59
spec:
  podSelector:
    matchLabels:
      key8: value18
      key25: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value34
      podSelector:
        matchLabels:
          key28: value45
          key37: value7
          key49: value21
